@@ -1,0 +1,18 @@
+#pragma GCC optimize("O3","unroll-loops","omit-frame-pointer","inline") //Optimization flags
+#pragma GCC option("arch=native","tune=native","no-zeroupper") //Enable SSE
+#pragma GCC target("sse")  //Enable SSE
+
+#include <immintrin.h>
+#include <iostream>
+//#include <chrono>
+
+#include "vec128i.h" // 128-bit packed 16-bit short integer numbers class
+
+using namespace std;
+
+int main()
+{
+	
+	
+	return 0;
+}
