@@ -2,6 +2,9 @@
 |  VERSIONE: 0.0.1  |
 +-------------------+
 
+06/07/2021:
+- aggiunti i prototipi dei wrappers per le operazioni SIMD sui vettori di float (AVX instruction set)
+
 04/07/2021:
 - Bignum: aggiunte le operazioni di conversione (casting)
 - aggiunto l'esempio "logistic"
